# Mini-Ray-Tracer

./: CMakeLists.txt  README.md
headers/: Color.h  Ray.h  Vec3.h
src/: main.cpp
